hphp/test/zend7/Zend/tests/bug36268.php.expectf

Fatal error: %s
Stack trace:
#0 {main}
  thrown in %sbug36268.php on line 8